tests/snapshots/validator_snapshots__validator_all@validator-10.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/10_generics.of
---
ParserError(
    "unexpected token ','",
)
