tests/snapshots/validator_snapshots__validator_all@validator-100.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/05_extensions/extend_specialized.of
---
ParserError(
    "unexpected token ','",
)
