tests/snapshots/validator_snapshots__validator_all@validator-102.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/06_type_logic/as_cast.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::process'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::process'",
        "unknown variable 'print' in function 'test_module::process'",
        "unknown variable 'print' in function 'test_module::process'",
    ],
)
