tests/snapshots/validator_snapshots__validator_all@validator-103.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/06_type_logic/is_operator.of
---
Ok
