tests/snapshots/validator_snapshots__validator_all@validator-104.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/07_error_management/error_checking.of
---
ParserError(
    "unexpected token ','",
)
