tests/snapshots/validator_snapshots__validator_all@validator-105.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/05_extensions/extend_specialized.of
---
ValidationErrors(
    [
        "invalid operator 'Mul' for operand of type ''tp0' in function 'test_module::Wrapper::double'",
        "type mismatch in function 'test_module::Wrapper::double' (binary Mul): expected ''tp0', found 'int64'",
    ],
)
