tests/snapshots/validator_snapshots__validator_all@validator-106.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/04_structs_interfaces/struct_instantiation.of
---
ParserError(
    "unexpected token 'var'",
)
