tests/snapshots/validator_snapshots__validator_all@validator-107.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/05_extensions/extend_basic.of
---
Ok
