tests/snapshots/validator_snapshots__validator_all@validator-109.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/10_generics/generic_function.of
---
Ok
