tests/snapshots/validator_snapshots__validator_all@validator-110.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/08_numeric_conversions/float_narrowing.of
---
ParserError(
    "unexpected token 'var'",
)
